crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D418_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- - kind:
      name: OverloadWithDocstring
      body: "Function decorated with `@overload` shouldn't contain a docstring"
      suggestion: ~
      fixable: false
    location:
      row: 34
      column: 8
    end_location:
      row: 34
      column: 25
    fix: ~
    parent: ~
  - kind:
      name: OverloadWithDocstring
      body: "Function decorated with `@overload` shouldn't contain a docstring"
      suggestion: ~
      fixable: false
    location:
      row: 90
      column: 8
    end_location:
      row: 90
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: OverloadWithDocstring
      body: "Function decorated with `@overload` shouldn't contain a docstring"
      suggestion: ~
      fixable: false
    location:
      row: 110
      column: 4
    end_location:
      row: 110
      column: 19
    fix: ~
    parent: ~

