crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__all.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
all.py:1:1: D100 Missing docstring in public module
  |
1 | def public_func():
  |  D100
2 |     pass
  |

all.py:1:5: D103 Missing docstring in public function
  |
1 | def public_func():
  |     ^^^^^^^^^^^ D103
2 |     pass
  |

all.py:9:7: D101 Missing docstring in public class
   |
 9 | class PublicClass:
   |       ^^^^^^^^^^^ D101
10 |     class PublicNestedClass:
11 |         pass
   |

all.py:10:11: D106 Missing docstring in public nested class
   |
10 | class PublicClass:
11 |     class PublicNestedClass:
   |           ^^^^^^^^^^^^^^^^^ D106
12 |         pass
   |


