crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__d417_google.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    UndocumentedParam:
      names:
        - y
        - z
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 5
  fix: ~
  parent: ~
- kind:
    UndocumentedParam:
      names:
        - y
        - z
  location:
    row: 14
    column: 4
  end_location:
    row: 14
    column: 5
  fix: ~
  parent: ~
- kind:
    UndocumentedParam:
      names:
        - y
        - z
  location:
    row: 27
    column: 4
  end_location:
    row: 27
    column: 5
  fix: ~
  parent: ~
- kind:
    UndocumentedParam:
      names:
        - y
        - z
  location:
    row: 39
    column: 4
  end_location:
    row: 39
    column: 5
  fix: ~
  parent: ~
- kind:
    UndocumentedParam:
      names:
        - y
  location:
    row: 52
    column: 4
  end_location:
    row: 52
    column: 5
  fix: ~
  parent: ~
- kind:
    UndocumentedParam:
      names:
        - y
  location:
    row: 65
    column: 4
  end_location:
    row: 65
    column: 5
  fix: ~
  parent: ~
- kind:
    UndocumentedParam:
      names:
        - y
  location:
    row: 77
    column: 4
  end_location:
    row: 77
    column: 5
  fix: ~
  parent: ~
- kind:
    UndocumentedParam:
      names:
        - x
  location:
    row: 98
    column: 4
  end_location:
    row: 98
    column: 5
  fix: ~
  parent: ~
- kind:
    UndocumentedParam:
      names:
        - "*args"
  location:
    row: 108
    column: 4
  end_location:
    row: 108
    column: 5
  fix: ~
  parent: ~

